# flask-api-mongodb

./: .dockerignore  .env  .env.tests  .gitignore  README.md  docker-compose.yml  pyproject.toml
starwarsguru/: app.py  configuration.py  database.py  exceptions.py  settings.py
starwarsguru/api/: base.py  films.py  planets.py
starwarsguru/models/: planets.py  starwars.py
starwarsguru/schemas/: planet_schemas.py
starwarsguru/services/: films_svc.py  planet_svc.py
starwarsguru/templates/: home.html
tests/: _test_api_films_delete.py  conftest.py  test_api_base.py  test_api_films_create.py  test_api_films_delete.py  test_api_films_list.py  test_api_films_update.py  test_api_planets_create.py  test_api_planets_update.py  test_svc_films_create_relation.py  test_svc_planets_create.py
tests/api/: test_api_films_create.py  test_api_films_delete.py  test_api_films_list.py  test_api_films_update.py  test_api_planets_create_mock.py  test_api_planets_update.py
tests/services/: test_svc_films_create_relation.py  test_svc_planets_create.py
